--- a/package.json
+++ b/package.json
@@ -3,17 +3,14 @@
   "version": "0.0.1",
   "bin": "./dist/index.js",
   "scripts": {
-    "dev": "bun run --hot ./src/index.ts"
+    "dev": "bun run --hot --env-file=.env ./src/index.ts"
   },
   "dependencies": {
-    "@hono/standard-validator": "^0.1.2",
-    "@modelcontextprotocol/sdk": "^1.7.0",
-    "hono": "^4.7.4",
-    "muppet": "latest",
-    "zod": "^3.24.2"
+    "@modelcontextprotocol/sdk": "^1.11.5",
+    "zod": "^3.25.20"
   },
   "devDependencies": {
-    "@types/node": "^22.13.10",
-    "typescript": "^5.8.2"
+    "@types/node": "^22.15.21",
+    "typescript": "^5.8.3"
   }
 }
