--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.11.5",
+    "yaml": "^2.8.0",
     "zod": "^3.25.20"
   },
   "devDependencies": {
